--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -29,142 +29,8 @@
         <header class="page-head">
             <!-- RD Navbar minimal-->
             <div class="rd-navbar-wrap">
-                <nav data-md-device-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-static" data-md-stick-up-offset="120px" data-lg-stick-up-offset="120px" class="rd-navbar rd-navbar-minimal rd-navbar-light" data-lg-auto-height="true" data-md-layout="rd-navbar-static" data-lg-layout="rd-navbar-static" data-lg-stick-up="true">
-                    <div class="rd-navbar-inner">
-                        <div class="rd-navbar-top-panel">
-                            <div>
-                                <address class="contact-info reveal-sm-inline-block text-left offset-none">
-                                    <div class="p unit unit-spacing-xs unit-horizontal">
-                                        <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-phone text-java"></span></div>
-                                        <div class="unit-body"><a href="callto:#" class="text-gray-darker">1-800-1234-567</a>
-                                            <br/><a href="callto:#" class="text-gray-darker">1-800-3214-654</a></div>
-                                    </div>
-                                </address>
-                            </div>
-                            <!--Navbar Brand-->
-                            <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo-dark.png' %}' alt=''/></a></div>
-                            <div>
-                                <address class="contact-info reveal-sm-inline-block text-left">
-                                    <div class="p unit unit-horizontal unit-spacing-xs">
-                                        <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-map-marker text-java"></span></div>
-                                        <div class="unit-body"><a href="#" class="text-gray-darker">2130 Fulton Street San Diego<br/>CA 94117-1080 USA</a></div>
-                                    </div>
-                                </address>
-                            </div>
-                        </div>
-                        <!-- RD Navbar Panel-->
-                        <div class="rd-navbar-panel">
-                            <!-- RD Navbar Toggle-->
-                            <button data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
-                            <!--Navbar Brand-->
-                            <div class="rd-navbar-brand veil-md"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo-dark.png' %}' alt=''/></a></div>
-                            <button data-rd-navbar-toggle=".rd-navbar, .rd-navbar-top-panel" class="rd-navbar-top-panel-toggle"><span></span></button>
-                        </div>
-                        <div class="rd-navbar-menu-wrap">
-                            <div class="rd-navbar-nav-wrap">
-                                <div class="rd-navbar-mobile-scroll">
-                                    <!--Navbar Brand Mobile-->
-                                    <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo-dark.png' %}' alt=''/></a></div>
-                                    <div class="form-search-wrap">
-                                        <!-- RD Search Form-->
-                                        <form action="search-results.html" method="GET" class="form-search rd-search">
-                                            <div class="form-group">
-                                                <label for="rd-navbar-form-search-widget" class="form-label form-search-label form-label-sm">Search</label>
-                                                <input id="rd-navbar-form-search-widget" type="text" name="s" autocomplete="off" class="form-search-input form-control form-control-gray-lightest input-sm" />
-                                            </div>
-                                            <button type="submit" class="form-search-submit"><span class="fa fa-search"></span></button>
-                                        </form>
-                                    </div>
-                                    <!-- RD Navbar Nav-->
-                                    <ul class="rd-navbar-nav">
-                                        <li class="active"><a href="index.html"><span>Home</span></a>
-                                        </li>
-                                        <li><a href="about.html"><span>About</span></a>
-                                        </li>
-                                        <li><a href="our-team.html"><span>Team</span></a>
-                                        </li>
-                                        <li><a href="#"><span>Pages</span></a>
-                                            <div class="rd-navbar-megamenu">
-                                                <div class="row">
-                                                    <div class="col-md-4 col-lg-4">
-                                                        <h6>Elements</h6>
-                                                        <hr class="text-subline" />
-                                                        <ul class="list-unstyled offset-lg-top-25">
-                                                            <li><a href="typography.html">Typography</a></li>
-                                                            <li><a href="forms.html">Forms</a></li>
-                                                            <li><a href="buttons.html">Buttons</a></li>
-                                                            <li><a href="grid-system.html">Grid</a></li>
-                                                            <li><a href="tabs-and-accordions.html">Tabs &amp; Accordions</a></li>
-                                                            <li><a href="infographics.html">Progress Bars</a></li>
-                                                            <li><a href="icons.html">Icons</a></li>
-                                                            <li><a href="tables.html">Tables</a></li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-4 col-lg-4">
-                                                        <h6>Pages 1</h6>
-                                                        <hr class="text-subline" />
-                                                        <ul class="list-unstyled offset-lg-top-25">
-                                                            <li><a href="team-member.html">Team Member Profile</a></li>
-                                                            <li><a href="careers.html">Careers</a></li>
-                                                            <li><a href="faq.html">FAQ Page</a></li>
-                                                            <li><a href="pricing.html">Pricing</a></li>
-                                                            <li><a href="coming-soon.html">Coming Soon</a></li>
-                                                            <li><a href="maintenance.html">Maintenance</a></li>
-                                                            <li><a href="under-constraction.html">Under construction</a></li>
-                                                            <li><a href="login.html">Login/Register</a></li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-4 col-lg-4">
-                                                        <h6>Pages 2</h6>
-                                                        <hr class="text-subline" />
-                                                        <ul class="list-unstyled offset-lg-top-25">
-                                                            <li><a href="Clients.html">Clients</a></li>
-                                                            <li><a href="partners.html">Partners</a></li>
-                                                            <li><a href="privacy.html">Terms of Use</a></li>
-                                                            <li><a href="search-results.html">Search Results</a></li>
-                                                            <li><a href="404.html">404 Page</a></li>
-                                                            <li><a href="503.html">503 Page</a></li>
-                                                            <li><a href="make-an-appointment.html">Make an Appointment</a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li><a href="services.html"><span>Services</span></a>
-                                        </li>
-                                        <li><a href="departments.html"><span>Departments</span></a>
-                                        </li>
-                                        <li><a href="timetable.html"><span>Timetable</span></a>
-                                        </li>
-                                        <li><a href="grid-gallery.html"><span>Gallery</span></a>
-                                            <ul class="rd-navbar-dropdown">
-                                                <li><a href="grid-gallery.html"><span class="text-middle">Grid Gallery</span></a>
-                                                </li>
-                                                <li><a href="grid-gallery-no-padding.html"><span class="text-middle">Gallery Without Padding</span></a>
-                                                </li>
-                                                <li><a href="masonry-gallery.html"><span class="text-middle">Masonry Gallery</span></a>
-                                                </li>
-                                                <li><a href="cobbles-gallery.html"><span class="text-middle">Cobbles Gallery</span></a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!--RD Navbar Search-->
-                            <div class="rd-navbar-search"><a data-rd-navbar-toggle=".rd-navbar-menu-wrap,.rd-navbar-search" href="#" class="rd-navbar-search-toggle mdi"><span></span></a>
-                                <form action="search-results.html" data-search-live="rd-search-results-live" method="GET" class="rd-navbar-search-form search-form-icon-right rd-search">
-                                    <div class="form-group">
-                                        <label for="rd-navbar-search-form-input" class="form-label">Type and hit enter...</label>
-                                        <input id="rd-navbar-search-form-input" type="text" name="s" autocomplete="off" class="rd-navbar-search-form-input form-control form-control-gray-lightest" />
-                                    </div>
-                                    <div id="rd-search-results-live" class="rd-search-results-live"></div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
+                {% block navegation %}{% include 'navegacion.html' %}{% endblock %}
+            </div>      
             <!--Swiper-->
             <div data-loop="true" data-height="" data-slide-effect="fade" data-dragable="false" data-min-height="400px" class="swiper-container swiper-slider bg-white">
                 <div class="swiper-wrapper text-center">
