--- a/web/templates/navegacion.html
+++ b/web/templates/navegacion.html
@@ -6,8 +6,7 @@
                 <address class="contact-info reveal-sm-inline-block text-left offset-none">
                     <div class="p unit unit-spacing-xs unit-horizontal">
                         <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-phone text-java"></span></div>
-                        <div class="unit-body"><a href="callto:#" class="text-gray-darker">1-800-1234-567</a>
-                            <br/><a href="callto:#" class="text-gray-darker">1-800-3214-654</a></div>
+                        <div class="unit-body"><a href="callto:#" class="text-gray-darker">51 2 334658</a></div>
                     </div>
                 </address>
             </div>
@@ -17,7 +16,7 @@
                 <address class="contact-info reveal-sm-inline-block text-left">
                     <div class="p unit unit-horizontal unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-map-marker text-java"></span></div>
-                        <div class="unit-body"><a href="#" class="text-gray-darker">2130 Fulton Street San Diego<br/>CA 94117-1080 USA</a></div>
+                        <div class="unit-body"><a href="#" class="text-gray-darker">Avenida Juan Cisternas 2283<br/>La Serena</a></div>
                     </div>
                 </address>
             </div>
@@ -47,76 +46,23 @@
                     </div>
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                        <li class="active"><a href="index.html"><span>Home</span></a>
+                        <li class="active"><a href="index.html"><span>Inicio</span></a>
+                        </li>    
+                        <li><a href="#"><span>Adminisón</span></a>
                         </li>
-                        <li><a href="about.html"><span>About</span></a>
-                        </li>
-                        <li><a href="our-team.html"><span>Team</span></a>
-                        </li>
-                        <li><a href="#"><span>Pages</span></a>
-                            <div class="rd-navbar-megamenu">
-                                <div class="row">
-                                    <div class="col-md-4 col-lg-4">
-                                        <h6>Elements</h6>
-                                        <hr class="text-subline" />
-                                        <ul class="list-unstyled offset-lg-top-25">
-                                            <li><a href="typography.html">Typography</a></li>
-                                            <li><a href="forms.html">Forms</a></li>
-                                            <li><a href="buttons.html">Buttons</a></li>
-                                            <li><a href="grid-system.html">Grid</a></li>
-                                            <li><a href="tabs-and-accordions.html">Tabs &amp; Accordions</a></li>
-                                            <li><a href="infographics.html">Progress Bars</a></li>
-                                            <li><a href="icons.html">Icons</a></li>
-                                            <li><a href="tables.html">Tables</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-4 col-lg-4">
-                                        <h6>Pages 1</h6>
-                                        <hr class="text-subline" />
-                                        <ul class="list-unstyled offset-lg-top-25">
-                                            <li><a href="team-member.html">Team Member Profile</a></li>
-                                            <li><a href="careers.html">Careers</a></li>
-                                            <li><a href="faq.html">FAQ Page</a></li>
-                                            <li><a href="pricing.html">Pricing</a></li>
-                                            <li><a href="coming-soon.html">Coming Soon</a></li>
-                                            <li><a href="maintenance.html">Maintenance</a></li>
-                                            <li><a href="under-constraction.html">Under construction</a></li>
-                                            <li><a href="login.html">Login/Register</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-4 col-lg-4">
-                                        <h6>Pages 2</h6>
-                                        <hr class="text-subline" />
-                                        <ul class="list-unstyled offset-lg-top-25">
-                                            <li><a href="Clients.html">Clients</a></li>
-                                            <li><a href="partners.html">Partners</a></li>
-                                            <li><a href="privacy.html">Terms of Use</a></li>
-                                            <li><a href="search-results.html">Search Results</a></li>
-                                            <li><a href="404.html">404 Page</a></li>
-                                            <li><a href="503.html">503 Page</a></li>
-                                            <li><a href="make-an-appointment.html">Make an Appointment</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li><a href="services.html"><span>Services</span></a>
-                        </li>
-                        <li><a href="departments.html"><span>Departments</span></a>
-                        </li>
-                        <li><a href="timetable.html"><span>Timetable</span></a>
-                        </li>
-                        <li><a href="grid-gallery.html"><span>Gallery</span></a>
+                        <li><a href="#"><span>Carrera</span></a>
                             <ul class="rd-navbar-dropdown">
-                                <li><a href="grid-gallery.html"><span class="text-middle">Grid Gallery</span></a>
+                                <li><a href="#"><span class="text-middle">Plan Estudios</span></a>
                                 </li>
-                                <li><a href="grid-gallery-no-padding.html"><span class="text-middle">Gallery Without Padding</span></a>
-                                </li>
-                                <li><a href="masonry-gallery.html"><span class="text-middle">Masonry Gallery</span></a>
-                                </li>
-                                <li><a href="cobbles-gallery.html"><span class="text-middle">Cobbles Gallery</span></a>
+                                <li><a href="#"><span class="text-middle">Perfil Profesional</span></a>
                                 </li>
                             </ul>
+                        </li>
+                        <li><a href="#"><span>Docentes</span></a>
+                        </li>
+                        <li><a href="#"><span>Clínica</span></a>
+                        </li>
+                        <li><a href="#"><span>Contacto</span></a>
                         </li>
                     </ul>
                 </div>
