--- a/template/site/404.html
+++ b/template/site/404.html
@@ -8,7 +8,8 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="keywords" content="SANA design multipurpose template">
+    <meta name="keywords" content="odontologia, uls, la serena, clinica, online">
+    <meta name="description" content="Odontologia Universidad de La Serena">
     <meta name="date" content="Dec 26">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
