Se agrega estilo inicial de prototipo

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -11,7 +11,7 @@
                 </address>
             </div>
             <!--Navbar Brand-->
-            <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo-dark.png' %}' alt=''/></a></div>
+            <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo.png' %}' alt=''/></a></div>
             <div>
                 <address class="contact-info reveal-sm-inline-block text-left">
                     <div class="p unit unit-horizontal unit-spacing-xs">
@@ -36,7 +36,7 @@
                     <ul class="rd-navbar-nav">
                         <li class="active"><a href="/"><span>Inicio</span></a>
                         </li>    
-                        <li><a href="#"><span>Adminisón</span></a>
+                        <li><a href="#"><span>Admisón</span></a>
                         </li>
                         <li><a href="#"><span>Carrera</span></a>
                             <ul class="rd-navbar-dropdown">
