--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -7,38 +7,13 @@
     <!--Swiper-->
     <div data-loop="true" data-height="" data-slide-effect="fade" data-dragable="false" data-min-height="400px" class="swiper-container swiper-slider bg-white">
         <div class="swiper-wrapper text-center">
-            <div id="page-loader" data-slide-bg="{% static 'images/intros/slide-01.jpg' %}" class="swiper-slide">
+            <div id="page-loader" data-slide-bg="{% static 'images/intros/slide-04.jpg' %}" class="swiper-slide">
                 <div class="swiper-caption">
                     <div class="swiper-slide-caption">
                         <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
-                            <h2>Welcome to Chiropractic<br class="veil reveal-md-block"> spinal healthcare
-        </h2>
-                            <h5 class="veil reveal-md-block">We welcome you to a warm environment, with friendly staff members<br class="veil reveal-md-block"> who wish to serve our patients in the best way possible.
-        </h5><a href="make-an-appointment.html" class="btn btn-ellipse btn-java offset-top-24">make an appointment</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div data-slide-bg="{% static 'images/intros/slide-02.jpg' %}" class="swiper-slide">
-                <div class="swiper-caption">
-                    <div class="swiper-slide-caption">
-                        <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
-                            <h2>High-quality<br class="veil reveal-md-block"> chiropractic services
-    </h2>
-                            <h5 class="veil reveal-md-block">We offer affordable high-quality chiropractic services to everyone<br class="veil reveal-md-block"> who cares about their health and would like to improve it.
-    </h5><a href="make-an-appointment.html" class="btn btn-ellipse btn-java offset-top-24">make an appointment</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div data-slide-bg="{% static 'images/intros/slide-03.jpg' %}" class="swiper-slide">
-                <div class="swiper-caption">
-                    <div class="swiper-slide-caption">
-                        <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
-                            <h2>The best therapy and<br class="veil reveal-md-block"> injuries treatment
-    </h2>
-                            <h5 class="veil reveal-md-block">At Chiropractic, you can get professional treatment of a wide<br class="veil reveal-md-block"> range of injuries and experience advanced therapy.
-    </h5><a href="make-an-appointment.html" class="btn btn-ellipse btn-java offset-top-24">make an appointment</a>
+                            <h2>Creando nuevos profesionales <br class="veil reveal-md-block">en el área de la salud</h2>
+                            <h5 class="veil reveal-md-block">para una mejor calidad de vida en la Región de Coquimbo
+        </h5><a href="#" class="btn btn-ellipse btn-java offset-top-24">Programa de Estudios</a>
                         </div>
                     </div>
                 </div>
@@ -53,23 +28,23 @@
     <!--What makes us different-->
     <section class="section-98 section-sm-110">
         <div class="shell">
-            <h3>What makes us different</h3>
+            <h3>Marcamos la diferencia</h3>
             <hr class="divider divider-lg bg-primary">
             <div class="range offset-top-60">
                 <div class="cell-md-4">
                     <div class="icon icon-xlg icon-rect icon-default icon-pills-xl"></div>
-                    <h5 class="text-bold text-primary">Modern Techniques</h5>
-                    <p>We use a combination of traditional and modern techniques to heal patients.</p>
+                    <h5 class="text-bold text-primary">Ciencia, humanidad y tecnología</h5>
+                    <p>La carrera de Odontología tiene una fuerte formación científica, humanista y tecnológica.</p>
                 </div>
                 <div class="cell-md-4 offset-top-50 offset-md-top-0">
                     <div class="icon icon-xlg icon-rect icon-default icon-doctor-xl"></div>
-                    <h5 class="text-bold text-primary">Qualified Specialists</h5>
-                    <p>Our team of more than 20 professionals are highly trained to serve our patients’ needs.</p>
+                    <h5 class="text-bold text-primary">Responsabilidad Social</h5>
+                    <p>Sólidos principios éticos y responsabilidad social</p>
                 </div>
                 <div class="cell-md-4 offset-top-50 offset-md-top-0">
                     <div class="icon icon-xlg icon-rect icon-default icon-medical-car-xl"></div>
-                    <h5 class="text-bold text-primary">Therapy Services</h5>
-                    <p>Chiropractic offers a wide variety of therapy services that helps in treating even the most complex injuries.</p>
+                    <h5 class="text-bold text-primary">Ciencias biomédicas</h5>
+                    <p>Énfasis en las ciencias biomédicas básicas, técnicas y clínicas para entender las condiciones normales y patologías</p>
                 </div>
             </div>
         </div>
@@ -79,45 +54,33 @@
         <div data-speed="0.2" data-type="media" data-url="{% static 'images/backgrounds/background-03-1920x610.jpg' %}" class="rd-parallax-layer"></div>
         <div data-speed="0" data-type="html" class="rd-parallax-layer section-98 section-sm-110 context-dark">
             <div class="shell text-center">
-                <h2>Supporting spinal health</h2>
-                <p class="offset-top-30 text-gray-light">We believe spinal health plays a vital role in human organism functioning. Get a free
-                    <br class="veil reveal-md-block"> consultation today to avoid problems with your health tomorrow.
+                <h2></h2>
+                <p class="offset-top-30 text-gray-light">El Cirujano Dentista puede ejercer libremente la profesión en atención clínica 
+                    <br class="veil reveal-md-block"> de pacientes en el ámbito público y privado, área urbana y rural, redes asistenciales de atención primaria y nivel secundario.
                 </p>
-                <div class="offset-top-30"><a href="make-an-appointment.html" class="btn btn-ellipse btn-java">free consultation</a></div>
+                <div class="offset-top-30"><a href="#" class="btn btn-ellipse btn-java">Admisión</a></div>
             </div>
         </div>
     </section>
     <!-- Main services-->
     <section class="section-98 section-sm-110">
         <div class="shell">
-            <h3>main services</h3>
+            <h3>Noticias</h3>
             <hr class="divider divider-lg bg-primary">
             <div class="offset-top-41 offset-md-top-60">
-                <p>We provide high-quality chiropractic services for the whole family.</p>
+                <p>Principales noticias de nuestro programa</p>
             </div>
             <div class="range offset-top-60 text-md-left">
                 <div class="cell-sm-6 cell-md-4">
-                    <div class="service"><img src="{% static 'images/pages/home-01-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Chiropractic Care</a>
+                    <div class="service"><img src="{% static 'images/pages/home-01-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Noticia 1</a>
                     </div>
                 </div>
                 <div class="cell-sm-6 cell-md-4 offset-top-50 offset-sm-top-0">
-                    <div class="service"><img src="{% static 'images/pages/home-02-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Massage Therapy</a>
+                    <div class="service"><img src="{% static 'images/pages/home-02-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Noticia 2</a>
                     </div>
                 </div>
                 <div class="cell-sm-6 cell-md-4 offset-top-50 offset-md-top-0">
-                    <div class="service"><img src="{% static 'images/pages/home-03-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Lifestyle Advice</a>
-                    </div>
-                </div>
-                <div class="cell-sm-6 cell-md-4 offset-top-50">
-                    <div class="service"><img src="{% static 'images/pages/home-04-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Nutrition Counseling</a>
-                    </div>
-                </div>
-                <div class="cell-sm-6 cell-md-4 offset-top-50">
-                    <div class="service"><img src="{% static 'images/pages/home-05-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Corrective Exercises</a>
-                    </div>
-                </div>
-                <div class="cell-sm-6 cell-md-4 offset-top-50">
-                    <div class="service"><img src="{% static 'images/pages/home-06-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Spinal Screenings</a>
+                    <div class="service"><img src="{% static 'images/pages/home-03-320x320.jpg' %}" width="320" height="320" alt="" class="img-responsive" /><a href="services.html" class="service-desc h6">Noticia 3</a>
                     </div>
                 </div>
             </div>
@@ -125,46 +88,51 @@
     </section>
     <!-- Our Team-->
     <section>
+            <h3>Nuestros Docentes</h3>
+            <hr class="divider divider-lg bg-primary">
+            <div class="offset-top-41 offset-md-top-60">
+                <p>Profesionales con gran prestigio académico</p>
+            </div>
         <div class="reveal-md-flex range-xs-center">
             <!-- Thumbnail Josip-->
             <figure class="thumbnail-josip thumbnail-big odd"><a href="team-member.html"><img width="384" height="410" src="{% static 'images/pages/our-team-05-384x410.jpg' %}" alt=""/></a>
                 <div class="thumbnail-desc">
-                    <h5 class="thumbnail-josip-title text-bold text-white">Scott Riley</h5>
-                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Chief Medical Officer</p>
+                    <h5 class="thumbnail-josip-title text-bold text-white">Cristian Marín</h5>
+                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Director</p>
                 </div>
-                <figcaption><a href="team-member.html" class="btn btn-block btn-rect text-md-left btn-java">view full profile</a></figcaption>
+                <figcaption><a href="#" class="btn btn-block btn-rect text-md-left btn-java">ver perfil</a></figcaption>
             </figure>
             <!-- Thumbnail Josip-->
             <figure class="thumbnail-josip thumbnail-big offset-top-41 offset-md-top-0"><a href="team-member.html"><img width="384" height="410" src="{% static 'images/pages/our-team-06-384x410.jpg' %}" alt=""/></a>
                 <div class="thumbnail-desc">
-                    <h5 class="thumbnail-josip-title text-bold text-white">Johnny Fowler</h5>
-                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Chiropractor</p>
+                    <h5 class="thumbnail-josip-title text-bold text-white">Pedro Calderón</h5>
+                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Odontólogo</p>
                 </div>
-                <figcaption><a href="team-member.html" class="btn btn-block btn-rect text-md-left btn-java">view full profile</a></figcaption>
+                <figcaption><a href="#" class="btn btn-block btn-rect text-md-left btn-java">ver perfil</a></figcaption>
             </figure>
             <!-- Thumbnail Josip-->
             <figure class="thumbnail-josip thumbnail-big offset-top-41 offset-md-top-0 odd"><a href="team-member.html"><img width="384" height="410" src="{% static 'images/pages/our-team-07-384x410.jpg' %}" alt=""/></a>
                 <div class="thumbnail-desc">
-                    <h5 class="thumbnail-josip-title text-bold text-white">Eric Snyder</h5>
-                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Clinical Chiropractic Assistant</p>
+                    <h5 class="thumbnail-josip-title text-bold text-white">Oscar Monardez</h5>
+                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Odontólogo</p>
                 </div>
-                <figcaption><a href="team-member.html" class="btn btn-block btn-rect text-md-left btn-java">view full profile</a></figcaption>
+                <figcaption><a href="#" class="btn btn-block btn-rect text-md-left btn-java">ver perfil</a></figcaption>
             </figure>
             <!-- Thumbnail Josip-->
             <figure class="thumbnail-josip thumbnail-big offset-top-41 offset-md-top-0"><a href="team-member.html"><img width="384" height="410" src="{% static 'images/pages/our-team-08-384x410.jpg' %}" alt=""/></a>
                 <div class="thumbnail-desc">
-                    <h5 class="thumbnail-josip-title text-bold text-white">Martha Schmidt</h5>
-                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Licensed Massage Therapist</p>
+                    <h5 class="thumbnail-josip-title text-bold text-white">Claudia Saavedra</h5>
+                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Odontólogo</p>
                 </div>
-                <figcaption><a href="team-member.html" class="btn btn-block btn-rect text-md-left btn-java">view full profile</a></figcaption>
+                <figcaption><a href="#" class="btn btn-block btn-rect text-md-left btn-java">ver perfil</a></figcaption>
             </figure>
             <!-- Thumbnail Josip-->
             <figure class="thumbnail-josip thumbnail-big offset-top-41 offset-md-top-0 odd"><a href="team-member.html"><img width="384" height="410" src="{% static 'images/pages/our-team-09-384x410.jpg' %}" alt=""/></a>
                 <div class="thumbnail-desc">
-                    <h5 class="thumbnail-josip-title text-bold text-white">Katherine Wong</h5>
-                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Front Desk Coordinator</p>
+                    <h5 class="thumbnail-josip-title text-bold text-white">Rosa Muñoz</h5>
+                    <p class="veil reveal-md-block text-italic text-white offset-top-0">Odontólogo</p>
                 </div>
-                <figcaption><a href="team-member.html" class="btn btn-block btn-rect text-md-left btn-java">view full profile</a></figcaption>
+                <figcaption><a href="#" class="btn btn-block btn-rect text-md-left btn-java">ver perfil</a></figcaption>
             </figure>
         </div>
     </section>
