--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -16,6 +16,7 @@
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald%7CLato:400italic,400,700">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
     <!--[if lt IE 10]>
         <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
         <script src="js/html5shiv.min.js"></script>
@@ -35,7 +36,7 @@
         {% block content %}{% endblock %}
         <!-- Page Footer-->
         <!-- Default footer-->
-        <footer class="section-relative section-34 section-md-66 page-footer bg-lighter context-light">
+        <footer class="section-relative section-34 section-md-66 page-footer bg-lighter context-light" id="footer-principal">
                 {% block footer %}{% include 'footer.html' %}{% endblock %}
         </footer>
     </div>
